kubernetes/gateway-rc.yaml

apiVersion: v1
kind: Service
metadata:
  name: gateway-lb
  namespace: micro
spec:
  type: LoadBalancer
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 30000
      targetPort: 3000
      name: http
