kubernetes/micro-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: micro-lb
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
  selector:
    app: gateway
