kubernetes/rabittmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: micro
  labels:
    app: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: ${PORT}
        - containerPort: 1${PORT}

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  namespace: micro
spec:
  selector:
    app: rabbitmq
  ports:
  - protocol: TCP
    port: ${PORT}
    targetPort: ${PORT}
    name: main-port
  - protocol: TCP
    port: 15673
    targetPort: 1${PORT}
    name: ui-port
